DevImprovement-added maven-surefire-plugin in pom.xml