@@ -106,6 +106,32 @@
 					<executable>${basedir}/src/main/resources/pdfReportGenerator.sh</executable>
 				</configuration>
 			</plugin>
+			<plugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-surefire-plugin</artifactId>
+                           <version>2.19.1</version>
+                           <configuration>
+                                  <testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
+                                  <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
+                                 <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
+                                 <systemPropertyVariables>
+                                        <environment>${environment}</environment>
+                                 </systemPropertyVariables>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <id>acceptance-test</id>
+                                        <phase>integration-test</phase>
+                                        <goals>
+                                               <goal>test</goal>
+                                        </goals>
+                                        <configuration>
+                                               <daemon>true</daemon>
+                                               <testFailureIgnore>false</testFailureIgnore>
+                                        </configuration>
+                                 </execution>
+                           </executions>
+                    </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
